--- a/letter_templates/layouts/application_form.html
+++ b/letter_templates/layouts/application_form.html
@@ -1,4 +1,5 @@
 <div class="document">
+	<b>OFFICIAL-SENSITIVE</b>
 	<table class="govuk-table">
 			<tr class="govuk-table__row">
 				<th scope="row" class="govuk-table__header">
