--- a/letter_templates/layouts/case_context_test.html
+++ b/letter_templates/layouts/case_context_test.html
@@ -11,7 +11,7 @@
 	{% if case_type %}
 		<h2>Case type</h2>
 		<ul>
-			<li><b>case type:</b>
+			<li><b>case_type:</b>
 				<ul>
 					{{ case_type|context_data_to_list|safe }}
 				</ul>
