--- a/api/letter_templates/layouts/ecju.html
+++ b/api/letter_templates/layouts/ecju.html
@@ -1,6 +1,5 @@
 {% load static %}
 
-
 <div class="document">
   <p id="references">
     Our Ref: TBC<br>
@@ -12,13 +11,13 @@
   <div id="addresses">
     <div id="recipient-address">
       <p>
-        {{ case.organisation.name }}<br>
-        {{ case.organisation.primary_site.address.address_line_1 }}<br>
-        {{ case.organisation.primary_site.address.address_line_2 }}<br>
-        {{ case.organisation.primary_site.address.postcode }}<br>
-        {{ case.organisation.primary_site.address.city }}<br>
-        {{ case.organisation.primary_site.address.region }}<br>
-        {{ case.organisation.primary_site.address.country.name }}
+        {{ organisation.name }}<br>
+        {% if organisation.primary_site.address_line_1 %} {{ organisation.primary_site.address_line_1 }}<br> {% endif %}
+        {% if organisation.primary_site.address_line_2 %} {{ organisation.primary_site.address_line_2 }}<br> {% endif %}
+        {{ organisation.primary_site.postcode }}<br>
+        {{ organisation.primary_site.city }}<br>
+        {{ organisation.primary_site.region }}<br>
+        {{ organisation.primary_site.country.name }}
       </p>
       <p>Date: {% now "jS F Y" %}</p>
     </div>
