Bugfix: Digital signature text in licence template mismatch
The text in the licence template was hard coded and therefore wouldn't match the
"include_digital_signature" boolean set by the user when creating the template.

This change passes the value to the part where the template is generated so it
can be correctly displayed.

--- a/api/letter_templates/layouts/siel.html
+++ b/api/letter_templates/layouts/siel.html
@@ -194,7 +194,7 @@
       <tr class="page-break-after">
         <td class="border-black" colspan="11">
           <span class="cell__heading">Digital Signature</span>
-          <span class="cell__uppercase">This document does not have a digital signature</span>
+          <span class="cell__uppercase">This document {{ include_digital_signature|yesno:"does,does not" }} have a digital signature</span>
         </td>
       </tr>
     </table>
