Remove identification_markings_details - field no longer on model

--- a/api/letter_templates/templates/letter_templates/application_form.html
+++ b/api/letter_templates/templates/letter_templates/application_form.html
@@ -387,9 +387,7 @@
 										{{ good.has_identification_markings }}
 										<span class="govuk-hint">
 										<br>
-											{% if good.has_identification_markings %}
-												{{ good.identification_markings_details|default_na }}
-											{% else %}
+											{% if not good.has_identification_markings %}
 												{{ good.no_identification_markings_details|default_na }}
 											{% endif %}
 										</span>
