--- a/api/letter_templates/templates/letter_templates/ecju.html
+++ b/api/letter_templates/templates/letter_templates/ecju.html
@@ -22,6 +22,7 @@
       <p>Date: {% now "jS F Y" %}</p>
     </div>
     <div id="sender-address">
+      <p>{{ case_officer_name }}</p>
       <p>Export Control Organisation</p>
       <p>
         3 Whitehall Place<br>
