Include references in template.

--- a/api/letter_templates/templates/letter_templates/ecju.html
+++ b/api/letter_templates/templates/letter_templates/ecju.html
@@ -2,8 +2,8 @@
 
 <div class="document">
   <p id="references">
-    Our Ref: TBC<br>
-    Your Ref: TBC<br>
+    Our Ref: {{ case_reference }}<br>
+    Your Ref: {{ details.user_reference }}<br>
     SPIRE Doc Ref:PREVIEW
   </p>
   <img src="{% static 'images/dit.png' %}">
